--- a/index102.html
+++ b/index102.html
@@ -9,7 +9,7 @@ var arr = [
 ];
 
 
-fetch('https://muckmool.github.io/data2.json')
+fetch('https://muckmool.github.io/data3.json')
   .then((response) => response.json())
   .then((data) => { 
     
@@ -324,7 +324,7 @@ fetch('https://muckmool.github.io/data2.json')
                                                       arr[m+0] + ", " +arr[m+2] + ", " +arr[m+4] + ", " +arr[m+6] + ", " +arr[m+8] + ", " +arr[m+10] + ", " +arr[m+12] +
                                                       arr[n+0] + ", " +arr[n+2] + ", " +arr[n+4] + ", " +arr[n+6] + ", " +arr[n+8] + ", " +arr[n+10] + ", " +arr[n+12] ;
 
-        document.getElementById("china").textContent = arr[i+16] + " " +arr[i+14];
+        document.getElementById("china").textContent = arr[i+16] + " / " +arr[i+14];
         document.getElementById("japan").textContent = arr[i+15];
 
 
