--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ fetch('https://muckmool.github.io/data3.json')
 
     &nbsp;<button onclick="canvas.erase(); clean_all(); increase(); search();" style="width: 70px; height: 35px; font-size: 15px;"> NEXT </button>
       
-    &nbsp;<canvas id="canvas" width="200" height="200" style="border: 2px solid; cursor: crosshair;"></canvas>
+    &nbsp;<canvas id="canvas" width="200" height="200" style="border: 2px solid; cursor: default;"></canvas>
 
     &nbsp;<button onclick="
     var e = document.getElementById('language');
