--- a/index104.html
+++ b/index104.html
@@ -491,22 +491,22 @@ fetch('https://muckmool.github.io/data3.json')
 <tr>
 <td></td>
 <td colspan="7">
-    <canvas id="canvas1" width="200" height="200" style="border: 2px solid; cursor: crosshair;"></canvas>
+    <canvas id="canvas1" width="200" height="200" style="border: 2px solid; cursor: default;"></canvas>
     <script type="text/javascript" src="https://muckmool.github.io/OCR/handwriting.canvas.js"></script>
     <script type="text/javascript" defer> var canvas = new handwriting.Canvas(document.getElementById('canvas1'), 3); </script>
-    <canvas id="canvas2" width="200" height="200" style="border: 2px solid; cursor: crosshair;"></canvas>
+    <canvas id="canvas2" width="200" height="200" style="border: 2px solid; cursor: default;"></canvas>
     <script type="text/javascript" src="https://muckmool.github.io/OCR/handwriting.canvas.js"></script>
     <script type="text/javascript" defer> var canvas = new handwriting.Canvas(document.getElementById('canvas2'), 3); </script>
-    <canvas id="canvas3" width="200" height="200" style="border: 2px solid; cursor: crosshair;"></canvas>
+    <canvas id="canvas3" width="200" height="200" style="border: 2px solid; cursor: default;"></canvas>
     <script type="text/javascript" src="https://muckmool.github.io/OCR/handwriting.canvas.js"></script>
     <script type="text/javascript" defer> var canvas = new handwriting.Canvas(document.getElementById('canvas3'), 3); </script>
-    <canvas id="canvas4" width="200" height="200" style="border: 2px solid; cursor: crosshair;"></canvas>
+    <canvas id="canvas4" width="200" height="200" style="border: 2px solid; cursor: default;"></canvas>
     <script type="text/javascript" src="https://muckmool.github.io/OCR/handwriting.canvas.js"></script>
     <script type="text/javascript" defer> var canvas = new handwriting.Canvas(document.getElementById('canvas4'), 3); </script>
-    <canvas id="canvas5" width="200" height="200" style="border: 2px solid; cursor: crosshair;"></canvas>
+    <canvas id="canvas5" width="200" height="200" style="border: 2px solid; cursor: default;"></canvas>
     <script type="text/javascript" src="https://muckmool.github.io/OCR/handwriting.canvas.js"></script>
     <script type="text/javascript" defer> var canvas = new handwriting.Canvas(document.getElementById('canvas5'), 3); </script>
-    <canvas id="canvas6" width="200" height="200" style="border: 2px solid; cursor: crosshair;"></canvas>
+    <canvas id="canvas6" width="200" height="200" style="border: 2px solid; cursor: default;"></canvas>
     <script type="text/javascript" src="https://muckmool.github.io/OCR/handwriting.canvas.js"></script>
     <script type="text/javascript" defer> var canvas = new handwriting.Canvas(document.getElementById('canvas6'), 3); </script>
 </td>
