--- a/bible02/book_read2_local.html
+++ b/bible02/book_read2_local.html
@@ -495,6 +495,7 @@ function book_load()  {
 
 <p>muckmool.tistory.com
 
+
 <p>
         <select id="book_list" style="width:500px;height:40px;font-size:15px;" >
             <option value="01">창세기  Genesis  创世纪  創世記</option>
@@ -566,10 +567,12 @@ function book_load()  {
             
 
         </select>
+<!--
         <input type='button' onclick='book_load()' value='Book Load'/> 
 
 
-<p>성경 <input type = "text" style="width:500px;height:40px;font-size:15px;" id="bk_input" value = "창세기  Genesis  创世纪  創世記"> 
+<p>성경 <input type = "text" style="width:500px;height:40px;font-size:15px;" id="bk_input" value = " "> 
+-->
 
 <p>장절 <input type = "text" style="width:200px;height:40px;font-size:15px;" id="cv_input" value = "1:1">   
    <input type='button' onclick='search_bkcv()' value='search'/> 
