--- a/javascript/canvas_002.html
+++ b/javascript/canvas_002.html
@@ -3,7 +3,7 @@
 
                 
 <br>
-<canvas id="canvas" width=1500 height=1500 style="border: 2px solid; cursor: crosshair;"></canvas>
+<canvas id="canvas" width=1500 height=1500 style="border: 2px solid; cursor: default;"></canvas>
 
 
 <br>
