--- a/bible02/book_read2.html
+++ b/bible02/book_read2.html
@@ -8,7 +8,7 @@ arr = [".", ".",".",".",".",".",".","."];
 temp = "";
 
     
-     fetch("https://muckmool.github.io/bible02/01_genesis.json")
+     fetch("https://muckmool.github.io/bible02/bible_data/01_genesis.json")
      .then((response) => response.json())
      .then((data) => { 
          
