--- a/wongoji/wongoji_002.html
+++ b/wongoji/wongoji_002.html
@@ -396,6 +396,7 @@
           var canvas11 = new handwriting.Canvas(document.getElementById('canvas11'), 3);
           var canvas12 = new handwriting.Canvas(document.getElementById('canvas12'), 3);
           var canvas13 = new handwriting.Canvas(document.getElementById('canvas13'), 3);
+          var canvas14 = new handwriting.Canvas(document.getElementById('canvas14'), 3);
 
 
           var canvas21 = new handwriting.Canvas(document.getElementById('canvas21'), 3);
