--- a/bible02/book_read2_local.html
+++ b/bible02/book_read2_local.html
@@ -600,7 +600,7 @@ function book_load()  {
         <tr><td>&nbsp</td></tr>
         <tr><td id="result9" style="font-size:26px; font-weight: 300;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result8">.</td></tr>
+        <tr><td id="result8" style="font-size:26px; font-weight: 300;">.</td></tr>
         <tr><td>&nbsp</td></tr>
         <tr><td id="result4" style="font-size:26px; font-weight: 300;">.</td></tr>
         <tr><td>&nbsp</td></tr>
