--- a/bible02/book_read4_local_japanese_v2.html
+++ b/bible02/book_read4_local_japanese_v2.html
@@ -1316,143 +1316,143 @@ resultElement10.innerText = arr[i*8 + 7];
 <table style="border-collapse: collapse; width: 100%;" border="0" width="100%" text-align="center">
     <tbody>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result9" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result9" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result4" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result4" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result5" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result5" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result10" style="font-size:26px; font-weight: 300;">.</td></tr> 
+        <tr><td id="result10" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr> 
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result8" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result8" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result8_1" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result8_1" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
 
   
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result19" style="font-size:26px; font-weight: 300;">.</td></tr>        
+        <tr><td id="result19" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>        
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result14" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result14" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result15" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result15" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result20" style="font-size:26px; font-weight: 300;">.</td></tr>  
+        <tr><td id="result20" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>  
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result18" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result18" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result18_1" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result18_1" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
 
 
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result29" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result29" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result24" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result24" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result25" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result25" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result30" style="font-size:26px; font-weight: 300;">.</td></tr> 
+        <tr><td id="result30" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr> 
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result28" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result28" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result28_1" style="font-size:26px; font-weight: 300;">.</td></tr>
-
- 
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result39" style="font-size:26px; font-weight: 300;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result34" style="font-size:26px; font-weight: 300;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result35" style="font-size:26px; font-weight: 300;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result40" style="font-size:26px; font-weight: 300;">.</td></tr> 
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result38" style="font-size:26px; font-weight: 300;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result38_1" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result28_1" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
 
  
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result49" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result39" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result44" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result34" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result45" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result35" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result50" style="font-size:26px; font-weight: 300;">.</td></tr>  
+        <tr><td id="result40" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr> 
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result48" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result38" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result48_1" style="font-size:26px; font-weight: 300;">.</td></tr>
-
-
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result59" style="font-size:26px; font-weight: 300;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result54" style="font-size:26px; font-weight: 300;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result55" style="font-size:26px; font-weight: 300;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result60" style="font-size:26px; font-weight: 300;">.</td></tr> 
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result58" style="font-size:26px; font-weight: 300;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result58_1" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result38_1" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
 
  
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result69" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result49" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result64" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result44" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result65" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result45" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result70" style="font-size:26px; font-weight: 300;">.</td></tr>  
+        <tr><td id="result50" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>  
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result68" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result48" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result68_1" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result48_1" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
 
 
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result79" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result59" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result74" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result54" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result75" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result55" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result80" style="font-size:26px; font-weight: 300;">.</td></tr> 
+        <tr><td id="result60" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr> 
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result78" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result58" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result78_1" style="font-size:26px; font-weight: 300;">.</td></tr>
-
- 
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result89" style="font-size:26px; font-weight: 300;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result84" style="font-size:26px; font-weight: 300;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result85" style="font-size:26px; font-weight: 300;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result90" style="font-size:26px; font-weight: 300;">.</td></tr> 
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result88" style="font-size:26px; font-weight: 300;">.</td></tr>
-        <tr><td>&nbsp</td></tr>
-        <tr><td id="result88_1" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result58_1" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
 
  
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result99" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result69" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result94" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result64" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result95" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result65" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result100" style="font-size:26px; font-weight: 300;">.</td></tr> 
+        <tr><td id="result70" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>  
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result98" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result68" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
         <tr><td>&nbsp</td></tr>
-        <tr><td id="result98_1" style="font-size:26px; font-weight: 300;">.</td></tr>
+        <tr><td id="result68_1" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+
+
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result79" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result74" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result75" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result80" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr> 
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result78" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result78_1" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+
+ 
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result89" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result84" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result85" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result90" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr> 
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result88" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result88_1" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+
+ 
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result99" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result94" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result95" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result100" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr> 
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result98" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
+        <tr><td>&nbsp</td></tr>
+        <tr><td id="result98_1" style="font-size:26px; font-weight: 300;  line-height: 200%;">.</td></tr>
 
  
 
