--- a/bible/book_read_2.html
+++ b/bible/book_read_2.html
@@ -69,15 +69,14 @@
 
                 if (cv_number == resultElement6.value) {
 
-                    //resultElement3.innerHTML = String(i);
+                    resultElement3.innerHTML = arr[i*3 +2];
+                    resultElement4.value = i;
                     break;
                 }
             }
             
               
         }  
-
-        resultElement3.innerHTML = arr[i*3 +2];
 
 
     }
