--- a/bible/book_read_local2.html
+++ b/bible/book_read_local2.html
@@ -52,7 +52,8 @@ arr = [".", ".", "."];
 
                 if (cv_number == resultElement6.value) {
 
-                    //resultElement3.innerHTML = String(i);
+                    resultElement3.innerHTML = arr[i*3 +2];
+                    resultElement4.value = i;
                     break;
                 }
             }
@@ -60,7 +61,7 @@ arr = [".", ".", "."];
               
         }  
 
-        resultElement3.innerHTML = arr[i*3 +2];
+
 
 
     }
