--- a/bible/bible_write_2.html
+++ b/bible/bible_write_2.html
@@ -1,10 +1,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>손글씨 원고지</title>
+    <title>성경 필사</title>
 </head>
 
 <p>
-<iframe src="book_read_2.html" width="1500" height="250">&gt;</iframe>
-<iframe src="wongoji_002.html" width="1600" height="1480">&gt;</iframe>
+<iframe src="https://muckmool.github.io/bible/book_read_2.html" width="1550" height="250">&gt;</iframe>
+<iframe src="https://muckmool.github.io/bible/wongoji_002.html" width="1550" height="550">&gt;</iframe>
 </p>
