--- a/bible/book_read_3.html
+++ b/bible/book_read_3.html
@@ -22,6 +22,35 @@
       } 
     );
 
+
+    function refresh1(){
+
+
+        const resultElement4 = document.getElementById('seq');
+
+        temp = resultElement4.value;
+
+        localStorage.setItem('last', temp);
+
+        //location.reload(true);
+
+    };
+
+    function refresh2(){
+
+        const resultElement4 = document.getElementById('seq');
+
+        temp = localStorage.getItem('last');
+
+        resultElement4.value = temp;
+
+    };
+
+
+    refresh2();
+
+    setTimeout(() => search_seq(), 100);
+
 </script>
 
 
@@ -29,6 +58,30 @@
 <script>
 
     function search_seq()  {
+
+        const resultElement3 = document.getElementById('result3');
+        const resultElement4 = document.getElementById('seq');
+        const resultElement5 = document.getElementById('bn');
+        const resultElement6 = document.getElementById('cv');
+
+        let i = resultElement4.value;
+        i = parseInt(i);
+
+        //console.log(i);
+
+        resultElement5.value = arr[i*3];
+        resultElement6.value = arr[i*3 +1];
+
+        resultElement3.innerHTML = arr[i*3 +2];
+
+
+    }
+
+    function search_seq2()  {
+
+        refresh2();
+
+        
 
         const resultElement3 = document.getElementById('result3');
         const resultElement4 = document.getElementById('seq');
@@ -102,6 +155,7 @@
         resultElement3.innerHTML = arr[i*3 +2];
         resultElement4.value = String(i);
 
+
     }
 
 
@@ -126,9 +180,9 @@
         resultElement3.innerHTML = arr[i*3 +2];
         resultElement4.value = String(i);
 
+
     }
 
-   
 
   
 
@@ -138,13 +192,14 @@
 BN   <input type = "text" style="width:100px;height:20px;font-size:12px;" id="bn" type="text" value="1" autofocus="" >
 CV   <input type = "text" style="width:100px;height:20px;font-size:12px;" id="cv" type="text" value="1:1" autofocus="" >
 
-<input type='button' onclick='search_cv()' value='search'/>
+<input type='button' onclick='search_cv(); refresh1();' value='search'/>
 
 SEQ <input type = "text" style="width:100px;height:20px;font-size:12px;" id="seq" type="text" value="1" autofocus="" >
 
-    <input type='button' onclick='search_seq()' value='search'/>
-    <input type='button' onclick='previous()' value='previous'/>
-    <input type='button' onclick='next()' value='next'/>
+    <input type='button' onclick='search_seq(); refresh1();' value='search'/>
+    <input type='button' onclick='search_seq2(); refresh1();' value='continue from last'/>
+    <input type='button' onclick='previous(); refresh1();' value='previous'/>
+    <input type='button' onclick='next(); refresh1();' value='next'/>
 
 
 <table style="border-collapse: collapse; width: 100%;" border="0" width="100%" text-align="center">
