--- a/book/nanjungilgi/book_read.html
+++ b/book/nanjungilgi/book_read.html
@@ -4,7 +4,7 @@
 
    arr = [".", ".",".","."];
        
-    fetch('https://muckmool.github.io/book/nanjungilgi.json')
+    fetch('https://muckmool.github.io/book/nanjungilgi_2.json')
       .then((response) => response.json())
       .then((data) => { 
         
