--- a/bible/bible_write_3_3_j.html
+++ b/bible/bible_write_3_3_j.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>성경 필사</title>
+    <title>일본어 성경 필사</title>
 </head>
 
 <p>
