--- a/bible/bible_write_4_2.html
+++ b/bible/bible_write_4_2.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>한자 성경 필사</title>
+    <title>성경 필사</title>
 </head>
 
 <p>
