--- a/bible/bible_write_3_2.html
+++ b/bible/bible_write_3_2.html
@@ -6,6 +6,6 @@
 
 <p>
 <iframe src="https://muckmool.github.io/bible/book_read_3_1.html" width="1500" height="150">&gt;</iframe>
-<iframe src="https://muckmool.github.io/bible/book_read_3.html" width="1500" height="150">&gt;</iframe>
+<iframe src="https://muckmool.github.io/bible/book_read_3_1_hanja.html" width="1500" height="150">&gt;</iframe>
 <iframe src="https://muckmool.github.io/bible/wongoji_003.html" width="1550" height="550">&gt;</iframe>
 </p>
